vérification entrée + requête préparé
