# controller/categoriesController.js
@@ -1,4 +1,4 @@
-const { SUCCESS_STATUS, NETWORK_ERROR_STATUS, NOTFOUND_STATUS } = require("../constants")
+const { SUCCESS_STATUS, NETWORK_ERROR_STATUS, NOTFOUND_STATUS } = require("../constants/constants")
 const ErrorResponseDTO = require("../dto/ErrorReponseDTO")
 const ResponseDTO = require("../dto/ResponseDTO")
 const { getConnectionDb } = require("../utils/db")
@@ -7,7 +7,7 @@ exports.getCategories= async (req, res, next) =>{
     try {
         const connection = await getConnectionDb()
         const sql = `SELECT * FROM Categories ORDER BY id`
-        const [data] = await connection.query(sql)
+        const [data] = await connection.execute(sql)
         await connection.end()
         res.status(SUCCESS_STATUS).json(new ResponseDTO("Données récupérées", data, SUCCESS_STATUS))
     } catch (error) {
@@ -21,8 +21,8 @@ exports.postCategories= async (req, res, next) =>{
     try {
         const {name_category} = req.body
         const connection = await getConnectionDb()
-        const sqlCategories= `INSERT INTO Categories (name_category) VALUES ('${name_category}')`
-        const data = await connection.query(sqlCategories)
+        const sqlCategories= `INSERT INTO Categories (name_category) VALUES (?)`
+        const data = await connection.execute(sqlCategories, [name_category])
         await connection.end()
         res.status(SUCCESS_STATUS).json(new ResponseDTO("Donnée insérée", data, SUCCESS_STATUS))
     } catch (error) {
@@ -34,14 +34,15 @@ exports.putCategories= async (req, res, next) =>{
     try {
         const {name_category, new_name_category} = req.body
         const connection = await getConnectionDb()
-        const sqlSelectCategories= `SELECT * FROM Categories WHERE name_category='${name_category}'`
-        const [category] = await connection.query(sqlSelectCategories)
+        await connection.beginTransaction()
+        const sqlSelectCategories= `SELECT * FROM Categories WHERE name_category=?`
+        const [[category]] = await connection.execute(sqlSelectCategories, [name_category])
         if(!category){
             return res.status(NOTFOUND_STATUS).json(new ErrorResponseDTO("La catégorie n'existe pas.", {}, NOTFOUND_STATUS))
         }
-        const categoryInfo = category[0]
-        const sqlCategories= `UPDATE Categories SET name_category='${new_name_category}' WHERE id=${categoryInfo.id} `
-        const [result] = await connection.query(sqlCategories)
+        const sqlCategories= `UPDATE Categories SET name_category=? WHERE id=? `
+        const [result] = await connection.execute(sqlCategories, [new_name_category, category.id])
+        await connection.commit()
         await connection.end()
         res.status(SUCCESS_STATUS).json(new ResponseDTO("Données mis à jour.", result, SUCCESS_STATUS))
     } catch (error) {
@@ -53,13 +54,15 @@ exports.deleteCategories= async (req,res, next) => {
     try {
         const {name_category} = req.params
         const connection = await getConnectionDb()
-        const sqlSelectCategories= `SELECT id FROM Categories WHERE name_category='${name_category}'`
-        const [[category]] = await connection.query(sqlSelectCategories)
+        await connection.beginTransaction()
+        const sqlSelectCategories= `SELECT id FROM Categories WHERE name_category=?`
+        const [[category]] = await connection.execute(sqlSelectCategories, [name_category])
         if(!category){
             return res.status(NOTFOUND_STATUS).json(new ErrorResponseDTO("La catégorie n'existe pas.", {}, NOTFOUND_STATUS))
         }
-        const sql = `DELETE FROM Categories WHERE id=${category.id}`
-        const [data] = await connection.query(sql)
+        const sql = `DELETE FROM Categories WHERE id=?`
+        const [data] = await connection.execute(sql, [category.id])
+        await connection.commit()
         await connection.end()
         res.status(SUCCESS_STATUS).json(new ResponseDTO("Donnée supprimée", data, SUCCESS_STATUS))
     } catch (error) {
