# controller/ordersController.js
@@ -1,7 +1,34 @@
-const { SUCCESS_STATUS, NETWORK_ERROR_STATUS, NOTFOUND_STATUS, BADREQUEST_STATUS } = require("../constants")
+const { SUCCESS_STATUS, NETWORK_ERROR_STATUS, NOTFOUND_STATUS, BADREQUEST_STATUS } = require("../constants/constants")
 const ErrorResponseDTO = require("../dto/ErrorReponseDTO")
 const ResponseDTO = require("../dto/ResponseDTO")
 const { getConnectionDb } = require("../utils/db")
+
+const updateProductOfOrders = async (productBody, connection)=>{
+    let productsWhereString = ""
+    let productsWhereTab = []
+    productBody.map((product)=>{
+        productsWhereString += `${productsWhereString.length >0? " OR ": ""}references_product=?`
+        productsWhereTab.push(product.name)
+    })
+    const sqlGetProductsId = `SELECT id,references_product, price FROM Products WHERE ${productsWhereString}`
+    const [productsInfo] = await connection.execute(sqlGetProductsId, productsWhereTab)
+    if(productBody.length !== productsInfo.length){
+        return res.status(BADREQUEST_STATUS).json(new ErrorResponseDTO("La liste de produits est incorrecte !", {}, BADREQUEST_STATUS))
+    }
+    let total_price = 0
+
+    const mergedProducts= productsInfo.map(item => {
+        const match = productBody.find(product => product.name === item.references_product);
+        total_price += item.price * match.quantity
+        return {
+          ...item, 
+          quantity: match ? match.quantity : 1
+        };
+      });
+
+    return {mergedProducts, total_price}
+}
+
 
 exports.getOrders = async (req, res, next) =>{
     try {
@@ -21,7 +48,7 @@ exports.getOrders = async (req, res, next) =>{
         LEFT JOIN Clients c ON c.id = o.id_client
         LEFT JOIN Orders_Products op ON k.id = op.id_order
         LEFT JOIN Products p ON op.id_product = p.id;`
-        const [data] = await connection.query(sql)
+        const [data] = await connection.execute(sql)
         const groupedData = Object.values(
             data.reduce((acc, item) => {
               const orderKey = item.number_order; 
@@ -55,33 +82,14 @@ exports.postOrders = async (req, res, next) =>{
         let nb_order;
         const connection = await getConnectionDb()
         await connection.beginTransaction();
-        const sqlClient = `SELECT id FROM Clients WHERE email= '${email}'`
-        const [[client]] = await connection.query(sqlClient)
+        const sqlClient = `SELECT id FROM Clients WHERE email=?`
+        const [[client]] = await connection.execute(sqlClient, [email])
         if(!client){
             return res.status(NOTFOUND_STATUS).json(new ErrorResponseDTO("Le client n'existe pas !", {}, NOTFOUND_STATUS))
         }
-        let productsWhereString = ""
-        products.map((product)=>{
-            productsWhereString += `${productsWhereString.length >0? " OR ": ""}references_product=${product.name}`
-        })
-        const sqlGetProductsId = `SELECT id,references_product, price FROM Products WHERE ${productsWhereString}`
-        const [productsId] = await connection.query(sqlGetProductsId)
-        if(products.length !== productsId.length){
-            return res.status(BADREQUEST_STATUS).json(new ErrorResponseDTO("La liste de produits est incorrecte !", {}, BADREQUEST_STATUS))
-        }
-
-        let total_price = 0
-
-        const mergedProducts= productsId.map(item => {
-            const match = products.find(product => product.name === item.references_product);
-            total_price += item.price * match.quantity
-            return {
-              ...item, 
-              quantity: match ? match.quantity : 1
-            };
-          });
+        const {mergedProducts, total_price}= await updateProductOfOrders(products, connection)
         const sqlGetnbOrders = `SELECT * FROM Orders ORDER BY ID DESC LIMIT 1`
-        const [[last_order]] = await connection.query(sqlGetnbOrders)
+        const [[last_order]] = await connection.execute(sqlGetnbOrders)
         if(!last_order.number_order){
             nb_order = "0000000001"
         }else{
@@ -89,12 +97,12 @@ exports.postOrders = async (req, res, next) =>{
             nb_order = parsedString.toString().padStart(10, "0")
         }
         
-        const sqlOrders = `INSERT INTO Orders (number_order, total_price, id_client) VALUES ('${nb_order}', ${total_price}, ${client.id})`
-        const [data] = await connection.query(sqlOrders)
+        const sqlOrders = `INSERT INTO Orders (number_order, total_price, id_client) VALUES (?,?,?)`
+        const [data] = await connection.execute(sqlOrders, [nb_order,total_price,client.id])
         
         const result = await Promise.all(mergedProducts.map(async (product)=>{
-            const sqlOrdersProviders = `INSERT INTO Orders_Products (id_order, id_product, quantity) VALUES ( ${data.insertId}, ${product.id}, ${product.quantity})`
-            const [insertRelation] = await connection.query(sqlOrdersProviders)
+            const sqlOrdersProviders = `INSERT INTO Orders_Products (id_order, id_product, quantity) VALUES ( ?, ?, ?)`
+            const [insertRelation] = await connection.execute(sqlOrdersProviders, [data.insertId, product.id, product.quantity])
             return insertRelation
             })
         )
@@ -112,41 +120,23 @@ exports.putOrders = async (req, res, next) =>{
         const {products, number_order} = req.body
         const connection = await getConnectionDb()
         await connection.beginTransaction();
-        const sqlSelectOrders = `SELECT id FROM Orders WHERE number_order='${number_order}'`
-        const [[orderInfo]] = await connection.query(sqlSelectOrders)
+        const sqlSelectOrders = `SELECT id FROM Orders WHERE number_order=?`
+        const [[orderInfo]] = await connection.execute(sqlSelectOrders, [number_order])
         if(!orderInfo) {
             return res.status(NOTFOUND_STATUS).json(new ResponseDTO("La commande n'existe pas.", {}, NOTFOUND_STATUS))
         }
-        const sqlProductsProvidersSELECT = `DELETE FROM Orders_Products WHERE id_order=${orderInfo.id}`
-        await connection.query(sqlProductsProvidersSELECT)
+        const sqlProductsProvidersSELECT = `DELETE FROM Orders_Products WHERE id_order=?`
+        await connection.execute(sqlProductsProvidersSELECT, [orderInfo.id])
+        const {mergedProducts, total_price}= await updateProductOfOrders(products, connection)
 
-        let productsWhereString = ""
-        products.map((product)=>{
-            productsWhereString += `${productsWhereString.length >0? " OR ": ""}references_product=${product.name}`
-        })
-        const sqlGetProductsId = `SELECT id,references_product, price FROM Products WHERE ${productsWhereString}`
-        const [productsInfo] = await connection.query(sqlGetProductsId)
-        if(products.length !== productsInfo.length){
-            return res.status(BADREQUEST_STATUS).json(new ErrorResponseDTO("La liste de produits est incorrecte !", {}, BADREQUEST_STATUS))
-        }
-        let total_price = 0
-
-        const mergedProducts= productsInfo.map(item => {
-            const match = products.find(product => product.name === item.references_product);
-            total_price += item.price * match.quantity
-            return {
-              ...item, 
-              quantity: match ? match.quantity : 1
-            };
-          });
         const result = await Promise.all(mergedProducts.map(async (product)=>{
-            const sqlOrdersProviders = `INSERT INTO Orders_Products (id_order, id_product, quantity) VALUES (${orderInfo.id}, ${product.id}, ${product.quantity})`
-            const [insertRelation] = await connection.query(sqlOrdersProviders)
+            const sqlOrdersProviders = `INSERT INTO Orders_Products (id_order, id_product, quantity) VALUES (?, ?, ?)`
+            const [insertRelation] = await connection.execute(sqlOrdersProviders, [orderInfo.id, product.id, product.quantity])
             return insertRelation
             })
         )
-        const sqlOrders = `UPDATE Orders SET total_price=${total_price} WHERE id=${orderInfo.id}`
-        const [orderUpdated] = await connection.query(sqlOrders)
+        const sqlOrders = `UPDATE Orders SET total_price=? WHERE id=?`
+        const [orderUpdated] = await connection.execute(sqlOrders, [total_price,orderInfo.id])
         const response = {orders_products : result, orders:orderUpdated}
 
         await connection.commit();
@@ -161,13 +151,15 @@ exports.deleteOrders = async (req,res, next) => {
     try {
         const {number_order} = req.params
         const connection = await getConnectionDb()
-        const sqlSelectOrders = `SELECT id FROM Orders WHERE number_order='${number_order}'`
-        const [[order]] = await connection.query(sqlSelectOrders)
+        await connection.beginTransaction()
+        const sqlSelectOrders = `SELECT id FROM Orders WHERE number_order=?`
+        const [[order]] = await connection.execute(sqlSelectOrders, [number_order])
         if(!order){
             return res.status(NOTFOUND_STATUS).json(new ErrorResponseDTO("La commande n'existe pas.", {}, NOTFOUND_STATUS))
         }
-        const sql = `DELETE FROM Orders WHERE id=${order.id}`
-        const [data] = await connection.query(sql)
+        const sql = `DELETE FROM Orders WHERE id=?`
+        const [data] = await connection.execute(sql,[order.id])
+        await connection.commit()
         await connection.end()
         res.status(SUCCESS_STATUS).json(new ResponseDTO("Donnée supprimée", data, SUCCESS_STATUS))
     } catch (error) {
