# controller/productsController.js
@@ -1,4 +1,4 @@
-const { SUCCESS_STATUS, NETWORK_ERROR_STATUS, NOTFOUND_STATUS, BADREQUEST_STATUS } = require("../constants")
+const { SUCCESS_STATUS, NETWORK_ERROR_STATUS, NOTFOUND_STATUS, BADREQUEST_STATUS } = require("../constants/constants")
 const ErrorResponseDTO = require("../dto/ErrorReponseDTO")
 const ResponseDTO = require("../dto/ResponseDTO")
 const { getConnectionDb } = require("../utils/db")
@@ -20,7 +20,7 @@ exports.getProducts = async (req, res, next) =>{
         LEFT JOIN Categories c ON c.id = p.id_category 
         LEFT JOIN Providers_Products pro_p ON keyss.id = pro_p.id_product
         LEFT JOIN Providers pro ON pro_p.id_provider = pro.id;`
-        const [data] = await connection.query(sql)
+        const [data] = await connection.execute(sql)
         const groupedData = Object.values(
             data.reduce((acc, item) => {
               const productKey = item.product; 
@@ -46,26 +46,23 @@ exports.getProducts = async (req, res, next) =>{
 
 exports.postProducts = async (req, res, next) =>{
     try {
-        const body = req.body
+        const {category, provider, name_product, references_product, stock, price} = req.body
         const connection = await getConnectionDb()
         await connection.beginTransaction();
-        const sqlCategory = `SELECT id FROM Categories WHERE name_category= '${body.category}'`
-        const [[category]] = await connection.query(sqlCategory)
-        if(!category){
+        const sqlCategory = `SELECT id FROM Categories WHERE name_category= ?`
+        const [[categoryInfo]] = await connection.execute(sqlCategory, [category])
+        if(!categoryInfo){
             return res.status(NOTFOUND_STATUS).json(new ErrorResponseDTO("La catégorie n'existe pas !", {}, NOTFOUND_STATUS))
         }
-        if(!body.provider){
-            return res.status(BADREQUEST_STATUS).json(new ErrorResponseDTO("Veuillez indiquer un fournisseur", {}, BADREQUEST_STATUS))
-        }
-        const sqlProvider = `SELECT id FROM Providers WHERE name_provider= '${body.provider}'`
-        const [[provider]] = await connection.query(sqlProvider)
-        if(!provider){
+        const sqlProvider = `SELECT id FROM Providers WHERE name_provider=?`
+        const [[providerInfo]] = await connection.execute(sqlProvider, [provider])
+        if(!providerInfo){
             return res.status(NOTFOUND_STATUS).json(new ErrorResponseDTO("Le fournisseur n'existe pas !", {}, NOTFOUND_STATUS))
         }
-        const sqlProducts = `INSERT INTO Products (name_product, references_product, stock, price, id_category) VALUES ('${body.nameProduct}', '${body.referenceProduct}', ${body.stock}, ${body.price}, ${category.id})`
-        const [data] = await connection.query(sqlProducts)
-        const sqlProductsProviders = `INSERT INTO Providers_Products (id_provider, id_product) VALUES (${provider.id}, ${data.insertId})`
-        await connection.query(sqlProductsProviders)
+        const sqlProducts = `INSERT INTO Products (name_product, references_product, stock, price, id_category) VALUES (?, ?, ?, ?,?)`
+        const [data] = await connection.execute(sqlProducts,[name_product, references_product, stock, price, categoryInfo.id])
+        const sqlProductsProviders = `INSERT INTO Providers_Products (id_provider, id_product) VALUES (?, ?)`
+        await connection.execute(sqlProductsProviders,[providerInfo.id, data.insertId])
         await connection.commit();
         await connection.end()
         res.status(SUCCESS_STATUS).json(new ResponseDTO("Donnée insérée", data, SUCCESS_STATUS))
@@ -78,48 +75,53 @@ exports.putProducts = async (req, res, next) =>{
     try {
         const {references_product,name_product, stock, price,category, provider} = req.body
         const connection = await getConnectionDb()
-        const sqlSelectProducts = `SELECT * FROM Products WHERE references_product='${references_product}'`
-        const [[products]] = await connection.query(sqlSelectProducts)
+        await connection.beginTransaction()
+        const sqlSelectProducts = `SELECT * FROM Products WHERE references_product=?`
+        const [[products]] = await connection.execute(sqlSelectProducts, [references_product])
         if(!products){
             return res.status(NOTFOUND_STATUS).json(new ErrorResponseDTO("Le produit n'existe pas.", {}, NOTFOUND_STATUS))
         }
         let updates =""
+        let updatesTab = []
         if(name_product){
-            updates += `${updates.length >0? ",": ""}name_product='${name_product}'`
+            updates += `${updates.length >0? ",": ""}name_product=?`
+            updatesTab.push(name_product)
         }
         if(stock){
-            updates += `${updates.length >0? ",": ""}stock=${stock}`
+            updates += `${updates.length >0? ",": ""}stock=?`
+            updatesTab.push(stock)
         } 
         if(price){
-            updates += `${updates.length >0? ",": ""}price=${price}`
+            updates += `${updates.length >0? ",": ""}price=?`
+            updatesTab.push(price)
         }
         
         const productInfo = products
-        await connection.beginTransaction();
         if(category){
-            const sqlCategory = `SELECT id FROM Categories WHERE name_category= '${category}'`
-            const [[result_category]] = await connection.query(sqlCategory)
+            const sqlCategory = `SELECT id FROM Categories WHERE name_category=?`
+            const [[result_category]] = await connection.execute(sqlCategory, [category])
             if(!result_category){
                 throw new Error("Il y a eu une erreur lors de la mise à jour des données.")
             }
-            updates += `${updates.length >0? ",": ""}id_category=${result_category.id}`
+            updates += `${updates.length >0? ",": ""}id_category=?`
+            updatesTab.push(result_category.id)
         }
         if(provider){
-            const sqlProvider = `SELECT id FROM Providers WHERE name_provider= '${provider}'`
-            const [[providerInfo]] = await connection.query(sqlProvider)
+            const sqlProvider = `SELECT id FROM Providers WHERE name_provider=?`
+            const [[providerInfo]] = await connection.execute(sqlProvider, [provider])
             if(!providerInfo){
                 return res.status(NOTFOUND_STATUS).json(new ErrorResponseDTO("Le fournisseur n'existe pas !", {}, NOTFOUND_STATUS))
             }
-            const sqlProductsProvidersSELECT = `SELECT * FROM Providers_Products WHERE id_product=${productInfo.id} AND id_provider=${providerInfo.id}`
-            const [[result]] = await connection.query(sqlProductsProvidersSELECT)
+            const sqlProductsProvidersSELECT = `SELECT * FROM Providers_Products WHERE id_product=? AND id_provider=?`
+            const [[result]] = await connection.execute(sqlProductsProvidersSELECT, [productInfo.id,providerInfo.id])
             if(result){
                 return res.status(BADREQUEST_STATUS).json(new ResponseDTO("Le fournisseur est déjà associé à ce produit.", result, BADREQUEST_STATUS))
             }
-            const sqlProductsProvidersINSERT = `INSERT INTO Providers_Products (id_product, id_provider) VALUES(${productInfo.id},${providerInfo.id})`
-            await connection.query(sqlProductsProvidersINSERT)
+            const sqlProductsProvidersINSERT = `INSERT INTO Providers_Products (id_product, id_provider) VALUES(?,?)`
+            await connection.execute(sqlProductsProvidersINSERT, [productInfo.id, providerInfo.id])
         }
-        const sqlProducts = `UPDATE Products SET ${updates} WHERE id=${productInfo.id}`
-        const [result] = await connection.query(sqlProducts)
+        const sqlProducts = `UPDATE Products SET ${updates} WHERE id=?`
+        const [result] = await connection.execute(sqlProducts, [...updatesTab, productInfo.id])
         await connection.commit();
         await connection.end()
         res.status(SUCCESS_STATUS).json(new ResponseDTO("Données mis à jour.", result, SUCCESS_STATUS))
@@ -130,15 +132,17 @@ exports.putProducts = async (req, res, next) =>{
 
 exports.deleteProducts = async (req,res, next) => {
     try {
-        const {referenceProduct} = req.params
+        const {references_product} = req.params
         const connection = await getConnectionDb()
-        const sqlSelectProducts = `SELECT id FROM Products WHERE references_product='${referenceProduct}'`
-        const [[products]] = await connection.query(sqlSelectProducts)
+        await connection.beginTransaction()
+        const sqlSelectProducts = `SELECT id FROM Products WHERE references_product=?`
+        const [[products]] = await connection.execute(sqlSelectProducts, [references_product])
         if(!products){
             return res.status(NOTFOUND_STATUS).json(new ErrorResponseDTO("Le produit n'existe pas.", {}, NOTFOUND_STATUS))
         }
-        const sql = `DELETE FROM Products WHERE id=${products.id}`
-        const [data] = await connection.query(sql)
+        const sql = `DELETE FROM Products WHERE id=?`
+        const [data] = await connection.execute(sql, [products.id])
+        await connection.commit()
         await connection.end()
         res.status(SUCCESS_STATUS).json(new ResponseDTO("Donnée supprimée", data, SUCCESS_STATUS))
     } catch (error) {
