# routes/products.js
@@ -1,11 +1,12 @@
 const express = require("express")
 const { getProducts, postProducts, deleteProducts, putProducts } = require("../controller/productsController")
+const { postProductsValidation, putProductsValidation, deleteProductsValidation } = require("../middleware/productsValidation")
 const router = express.Router()
 
 router.get('/', getProducts)
-router.post('/', postProducts)
-router.put('/', putProducts)
-router.delete('/:referenceProduct', deleteProducts)
+router.post('/', postProductsValidation, postProducts)
+router.put('/',putProductsValidation, putProducts)
+router.delete('/:references_product', deleteProductsValidation, deleteProducts)
 
 
 module.exports = router
